// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.pms.contracts.execution.events;

import "io/harness/pms/contracts/ambiance/ambiance.proto";
import "io/harness/pms/contracts/execution/events/orchestration_event_type.proto";

import "io/harness/pms/contracts/execution/status.proto";
import "io/harness/pms/contracts/triggers/trigger_payload.proto";

option java_multiple_files = true;

message OrchestrationEvent {
  io.harness.pms.contracts.ambiance.Ambiance ambiance = 1;
  OrchestrationEventType eventType = 2;
  bytes stepParameters = 5;
  io.harness.pms.contracts.execution.Status status = 6;
  string serviceName = 7;
  triggers.TriggerPayload triggerPayload = 8;
  repeated string tags = 9;
  bytes moduleInfo = 10;
  int64 endTs = 11;
}
