// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.pms.contracts.plan;

option java_multiple_files = true;

import "io/harness/pms/contracts/plan/plan_creation_service.proto";

message CreatePartialPlanEvent {
  map<string, PlanCreationContextValue> context = 2;
  AsyncCreatorType type = 3;
  string notifyId = 4;
  string planCreationId = 5;
  Dependencies deps = 6;
}

enum AsyncCreatorType {
  INVALID = 0;
  PLAN_CREATION = 1;
}

message PartialPlanResponse {
  string notifyId = 1;
  oneof response {
    ErrorResponse errorResponse = 2;
    PlanCreationBlobResponse blobResponse = 3;
  }
  AsyncCreatorType type = 4;
  string planCreationId = 5;
}
